--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Meghnath Das - Profile</title>
+    <title>Devendran R - Profile</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Meghnath Das - Profile">
-    <meta name="author" content="Meghnath Das">
+    <meta name="description" content="Devendran R - Profile">
+    <meta name="author" content="Devendran R">
 
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
@@ -19,9 +19,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <meta property="og:url" content="https://meghnathdas.github.io/" />
+    <meta property="og:url" content="https://devendran1.github.io/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Meghnath Das - Profile" />
+    <meta property="og:title" content="Devendran - Profile" />
     <meta property="og:description" content="Experienced Full Stack Web Developer" />
     <meta property="og:image" content="https://meghnathdas.github.io/public/images/myPic.webp" />
     <meta property="og:site_name" content="https://meghnathdas.github.io, i.e. Meghnath Das" />
@@ -49,11 +49,11 @@
         ======================================================-->
         <section class="resume-section" id="about">
             <div class="w-100">
-                <h1 class="mb-0">Meghnath
-                    <span class="text-primary">Das</span>
+                <h1 class="mb-0">Devendran
+                    <span class="text-primary">R</span>
                 </h1>
-                <div class="subheading">Bengaluru - 560037, India · (+91) 9831267437 ·
-                    <a href="mailto:meghnath.babin@gmail.com">meghnath.babin@gmail.com</a>
+                <div class="subheading">Bengaluru - 560048, India · (+91) 9620441743 ·
+                    <a href="mailto:rdevendranmca@gmail.com">rdevendranmca@gmail.com</a>
                 </div>
                 <p>
                     <ul>
@@ -68,14 +68,11 @@
                 </p>
                 <div class="links-section">
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/meghnathdas/" target="_blank">
+                        <a href="linkedin.com/in/devendran-r" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://github.com/meghnathdas" target="_blank">
+                        <a href="https://github.com/devendran1" target="_blank">
                             <i class="fab fa-github"></i>
-                        </a>
-                        <a href="https://www.facebook.com/MeghnathBabin" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
                         </a>
                     </div>
                     <a target="_blank" class="button-style-link resume-download-button" href=" https://docs.google.com/document/export?format=pdf&id=1eoaTTOW9eZ7apEboTWZWf_d6nfUOkxmriuhN7h6xXsk&includes_info_params=true">
